--- a/package.json
+++ b/package.json
@@ -9,20 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@docusaurus/utils": "^2.1.0",
     "@nature-ui/core": "0.0.0-dev-20221025095017",
+    "contentlayer": "^0.2.8",
+    "github-slugger": "^2.0.0",
+    "markdown-toc": "^1.2.0",
+    "mdx-bundler": "^9.0.1",
+    "nanoid": "^4.0.0",
     "next": "13.0.0",
+    "next-contentlayer": "^0.2.8",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "remark": "^14.0.2",
+    "remark-emoji": "^3.0.2",
+    "remark-gfm": "^3.0.1",
+    "remark-slug": "^7.0.1",
+    "shelljs": "^0.8.5"
   },
   "devDependencies": {
+    "@types/github-slugger": "^2.0.0",
     "@types/node": "18.11.7",
+    "@types/prettier": "^2.7.1",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "@types/shelljs": "^0.8.11",
     "autoprefixer": "^10.4.13",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
     "postcss": "^8.4.18",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.2.1",
-    "typescript": "4.8.4"
+    "tslib": "^2.4.0",
+    "typescript": "4.8.4",
+    "unified": "^10.1.2",
+    "unist-util-visit": "^4.1.1"
   }
 }
