--- a/package.json
+++ b/package.json
@@ -1,47 +1,60 @@
 {
-  "name": "nature-ui-docs",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@docusaurus/utils": "^2.1.0",
-    "@nature-ui/core": "0.0.0-dev-20221025095017",
-    "contentlayer": "^0.2.8",
-    "github-slugger": "^2.0.0",
-    "markdown-toc": "^1.2.0",
-    "mdx-bundler": "^9.0.1",
-    "nanoid": "^4.0.0",
-    "next": "13.0.0",
-    "next-contentlayer": "^0.2.8",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "remark": "^14.0.2",
-    "remark-emoji": "^3.0.2",
-    "remark-gfm": "^3.0.1",
-    "remark-slug": "^7.0.1",
-    "shelljs": "^0.8.5"
-  },
-  "devDependencies": {
-    "@types/github-slugger": "^2.0.0",
-    "@types/node": "18.11.7",
-    "@types/prettier": "^2.7.1",
-    "@types/react": "18.0.24",
-    "@types/react-dom": "18.0.8",
-    "@types/shelljs": "^0.8.11",
-    "autoprefixer": "^10.4.13",
-    "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0",
-    "postcss": "^8.4.18",
-    "prettier": "^2.7.1",
-    "tailwindcss": "^3.2.1",
-    "tslib": "^2.4.0",
-    "typescript": "4.8.4",
-    "unified": "^10.1.2",
-    "unist-util-visit": "^4.1.1"
-  }
+	"name": "nature-ui-docs",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"cache:clean": "rm -rf .next .contentlayer",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@docsearch/react": "^3.3.0",
+		"@docusaurus/utils": "^2.2.0",
+		"@mdx-js/react": "^2.1.5",
+		"@nature-ui/core": "0.0.0-dev-20221025095017",
+		"@nature-ui/icons": "2.0.3-alpha.0",
+		"@nature-ui/utils": "2.0.3-alpha.0",
+		"contentlayer": "^0.2.9",
+		"formik": "^2.2.9",
+		"framer-motion": "^7.6.5",
+		"github-slugger": "^2.0.0",
+		"markdown-toc": "^1.2.0",
+		"mdx-bundler": "^9.0.1",
+		"nanoid": "^4.0.0",
+		"next": "13.0.0",
+		"next-contentlayer": "^0.2.9",
+		"next-seo": "^5.14.0",
+		"prism-react-renderer": "^1.3.5",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-icons": "^4.6.0",
+		"react-live": "^3.1.1",
+		"react-lorem-component": "^0.13.0",
+		"react-remove-scroll": "^2.5.5",
+		"remark": "^14.0.2",
+		"remark-emoji": "^3.0.2",
+		"remark-gfm": "^3.0.1",
+		"remark-slug": "^7.0.1",
+		"shelljs": "^0.8.5"
+	},
+	"devDependencies": {
+		"@types/github-slugger": "^2.0.0",
+		"@types/node": "18.11.7",
+		"@types/prettier": "^2.7.1",
+		"@types/react": "18.0.24",
+		"@types/react-dom": "18.0.8",
+		"@types/shelljs": "^0.8.11",
+		"autoprefixer": "^10.4.13",
+		"eslint": "8.26.0",
+		"eslint-config-next": "13.0.0",
+		"postcss": "^8.4.18",
+		"prettier": "^2.7.1",
+		"tailwindcss": "^3.2.2",
+		"tslib": "^2.4.1",
+		"typescript": "4.8.4",
+		"unified": "^10.1.2",
+		"unist-util-visit": "^4.1.1"
+	}
 }
