--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
 	"compilerOptions": {
-		"target": "es5",
+		"target": "esnext",
 		"importHelpers": true,
 		"lib": ["dom", "dom.iterable", "esnext"],
 		"allowJs": true,
 		"skipLibCheck": true,
-		"strict": true,
+		"strict": false,
 		"forceConsistentCasingInFileNames": true,
 		"noEmit": true,
 		"esModuleInterop": true,
@@ -16,12 +16,19 @@
 		"jsx": "preserve",
 		"incremental": true,
 		"baseUrl": ".",
-		"downlevelIteration": true,
+		"downlevelIteration": false,
+		"noImplicitAny": false,
 		"paths": {
 			"utils/*": ["src/utils/*"],
+			"hooks/*": ["src/hooks/*"],
+			"types/*": ["src/types/*"],
+			"components/*": ["src/components/*"],
 			"contentlayer/generated": ["./.contentlayer/generated"]
-			// "components/*": ["src/components/*"],
-			// "hooks/*": ["src/hooks/*"]
+		}
+	},
+	"ts-node": {
+		"compilerOptions": {
+			"module": "CommonJS"
 		}
 	},
 	"include": [
