--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nature-ui/core": "0.0.0-dev-20221025095017",
     "@nature-ui/icons": "2.0.3-alpha.0",
     "@nature-ui/utils": "2.0.3-alpha.0",
+    "@reach/router": "^1.3.4",
     "contentlayer": "^0.2.9",
     "formik": "^2.2.9",
     "framer-motion": "^7.6.5",
