--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "@docsearch/react": "^3.3.0",
     "@docusaurus/utils": "^2.2.0",
     "@mdx-js/react": "^2.1.5",
-    "@nature-ui/core": "0.0.0-dev-20221225100930",
-    "@nature-ui/icons": "2.0.3-alpha.0",
-    "@nature-ui/utils": "2.0.3-alpha.0",
-    "@reach/router": "^1.3.4",
+    "@nature-ui/core": "2.2.0",
+    "@nature-ui/icons": "2.2.0",
+    "@nature-ui/utils": "2.2.0",
     "contentlayer": "^0.2.9",
     "formik": "^2.2.9",
     "framer-motion": "^7.6.5",
@@ -45,8 +44,8 @@
     "@types/github-slugger": "^2.0.0",
     "@types/node": "18.11.7",
     "@types/prettier": "^2.7.1",
-    "@types/react": "18.0.24",
-    "@types/react-dom": "18.0.8",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
     "@types/shelljs": "^0.8.11",
     "autoprefixer": "^10.4.13",
     "eslint": "8.26.0",
