--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "markdown-toc": "^1.2.0",
     "mdx-bundler": "^9.0.1",
     "nanoid": "^4.0.0",
-    "next": "12.3.3",
+    "next": "^13.1.1",
     "next-contentlayer": "^0.2.9",
     "next-seo": "^5.14.0",
     "prism-react-renderer": "^1.3.5",
