--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start",
     "cache:clean": "rm -rf .next .contentlayer",
     "format": "prettier --write .",
+    "search-meta:gen": "tsx scripts/get-search-meta.ts",
     "lint": "next lint"
   },
   "dependencies": {
     "@docsearch/react": "^3.3.0",
     "@docusaurus/utils": "^2.2.0",
+    "@emotion/react": "^11.10.6",
     "@mdx-js/react": "^2.1.5",
     "@nature-ui/core": "2.2.0",
     "@nature-ui/icons": "2.2.0",
@@ -54,6 +56,7 @@
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.2",
     "tslib": "^2.4.1",
+    "tsx": "^3.12.3",
     "typescript": "4.8.4",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.1"
